[package]
name = "conc_testing"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "testable",
    "."
]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
regex = "1"
testable = { path = "testable" }
futures = "0.3.31"

[dev-dependencies]
testable = { path = "testable" }

[features]
tokitest = []
