[package]
name = "tokitest"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "macro",
    "."
]

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
regex = "1"
tokitest-macro = { path = "macro" }
futures = "0.3.31"

[dev-dependencies]
tokitest-macro = { path = "macro" }

[features]
tokitest = []
